[package]
name = "cusolver-sys"
version = "0.1.0"
edition = "2021"

build = "build.rs"
links = "cusolver"

description   = "Rust binding to CUDA solver API"
keywords      = ["GPGPU", "CUDA", "ffi"]
license       = "MIT/Apache-2.0"
readme        = "../README.md"
categories    = []

[build-dependencies]
cuda-config = "0.1.0"
